--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-stream-a-recording-tutorial",
   "version": "1.0.0",
+  "license": "MIT",
   "dependencies": {
     "@freeclimb/sdk": "^1.0.0",
     "dotenv": "^8.1.0"
